--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,15 +6,21 @@
   box-sizing: border-box;
   position: relative;
   min-width: 0;
+  transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
 }
 html {
   overflow-x: hidden !important;
   scroll-behavior: smooth;
+
   scroll-padding-top: 6rem;
 }
 body {
   min-height: 100dvh;
-  background: #212529;
+  background: #0f0f0f;
 }
 h1,
 h2,
@@ -24,6 +30,19 @@ h4 {
 }
 p {
   text-wrap: pretty;
+}
+::-webkit-scrollbar {
+  width: 7px;
+  scrollbar-color: #c0c0c0;
+}
+::-webkit-scrollbar-thumb {
+  background: #6a0dad;
+  border-radius: 10px;
+}
+
+::selection {
+  color: white;
+  background: #6a0dad;
 }
 
 .floating-image {
